--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "glob": "^10.3.10",
     "minimatch": "^10.0.1",
     "music-metadata": "^11.2.3",
+    "node-id3": "^0.2.9",
     "zod": "3.24.1",
     "zod-to-json-schema": "3.24.5"
   },
